# sahko

./: Cargo.toml  README.md
.cargo/: config.toml
common/: Cargo.toml
common/src/: config.rs  domain.rs  email.rs  lib.rs  prices.rs  schedule.rs
common/src/prices/: elering.rs  mod.rs  porssisahko.rs
sahko/: Cargo.toml
sahko-web/: Cargo.toml
sahko-web/src/: date.rs  lock.rs  main.rs
sahko-web/src/routes/: email.rs  index.rs  mod.rs  schedule.rs  stats.rs
sahko-web/templates/: base.html
sahko-web/templates/components/: schedule.html
sahko-web/templates/pages/: index.html  stats.html
sahko/src/: domain.rs  email.rs  main.rs  schedule.rs
src/: config.rs  domain.rs  email.rs  gpio.rs  lib.rs  main.rs  prices.rs  schedule.rs
