[package]
name = "sahko-web"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6"
askama = "0.12"
axum = "0.6"
axum-extra = { version = "0.8", features = ["form", "query"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
common = { path = "../common" }
serde = { version = "1.0.193", features = ["derive"] }
