[package]
name = "sahko"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
eyre = "0.6"
chrono = { version = "0.4.26", features = ["serde"] }
gpio-cdev = "0.6.0"
lazy_static = "1.4.0"
pico-args = "0.5.0"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.107"
